Changelog:

12/8:Created Github repo and added stylesheet. Max working on CSS, Emily on the framework and event handlers,and John & Justin beginning levels

12/9: Still under code freeze. Emily is working on new method for verifying levels. New functionality: switching between levels

12/9 -2: Emily has BasicObjects and ElucidGameJS ready for making levels. Ends the code freeze. Make sure TODO's are completed in both files when you make the copy

12/12: Levels assigned. Emily finished level 1 and moved onto level 7. John created code for level 3. Justin assigned level 2. Max almost done with stylesheet

12/14: Level 3 and 4 are finished, John will work on Level 6