@@ -18,7 +18,7 @@
 		<button id="circleButton">circle</button>
 	</div>
 	<!--creates the space to draw the objects-->
-	<canvas id="mainContent" height = "735" width="1200" style="border:1px solid #d3d3d3"> 
+	<canvas id="mainContent" height = "735" width="1200" style="border:1px solid #d3d3d3">
 		The game isn't working
 	</canvas>
 	<!--code for the level itself-->
